--- a/sunsettings_base/src/app/globals.css
+++ b/sunsettings_base/src/app/globals.css
@@ -65,7 +65,7 @@
   
 @layer base {
   body {
-    @apply text-foreground font-base bg-background;
+    @apply text-foreground font-sans bg-background;
   }
 
   h1, h2, h3, h4, h5, h6{
